k8s/domains/auth/workloads/ui/infra/overlays/prod-eu/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ui
spec:
  template:
    spec:
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: ui
          volumeMounts:
            - name: tmp
              mountPath: /tmp
